@@ -1999,11 +1999,6 @@ Values have the following meanings:
   </dd>
 </dl>
 
-<p class=issue>
-  For SVG percentage values might be resolved according to the painted bounding box and not bounding client rect (alias
-  object bounding box).
-</p> 
-
 <h3 id="the-clip-rule">The 'clip-rule' property</h3>
 
 <table class="propdef">
