@@ -3230,10 +3230,6 @@ div {
     rel=biblioentry>[CSS3-EXCLUSIONS]<!--{{!CSS3-EXCLUSIONS}}--></a>.)
   </dl>
 
-  <p class=issue> For SVG percentage values might be resolved according to
-   the painted bounding box and not bounding client rect (alias object
-   bounding box).
-
   <h3 id=the-clip-rule><span class=secno>8.2. </span>The ‘<a
    href="#clip-rule"><code class=property>clip-rule</code></a>’ property</h3>
 
