@@ -1,4 +1,7 @@
 2013-01-17  Dirk Schulze  <dschulze@adobe.com>
+	SVG WG resolved to use bounding client rect for percentage resolving.
+
+2013-01-17  Dirk Schulze  <dschulze@adobe.com>
 	Make SVGClipPathElement inherit from SVGElement and add 'transform' attribute to interface.
 
 2013-01-15  Dirk Schulze  <dschulze@adobe.com>
